--- a/tomcat_ubuntu.yaml
+++ b/tomcat_ubuntu.yaml
@@ -18,3 +18,7 @@
         group: tomcat
         shell: /bin/false
         home: /opt/tomcat
+    - name: download tomcat
+      get_url:
+        url: "https://downloads.apache.org/tomcat/tomcat-8/v8.5.66/bin/apache-tomcat-8.5.66.zip"
+        dest: /tmp
