added exracting file

--- a/tomcat_ubuntu.yaml
+++ b/tomcat_ubuntu.yaml
@@ -22,3 +22,15 @@
       get_url:
         url: "https://downloads.apache.org/tomcat/tomcat-8/v8.5.66/bin/apache-tomcat-8.5.66.zip"
         dest: /tmp
+    - name: directory creation
+      file:
+        path: /opt/tomcat
+        state: present
+    - name: unzip package
+      package:
+        name: unzip
+        state: present
+    - name: extracting file
+      unarchive:
+        src: /tmp/apache-tomcat-8.5.66.zip
+        dest: /opt/tomcat/
