--- a/tomcat_ubuntu.yaml
+++ b/tomcat_ubuntu.yaml
@@ -68,12 +68,8 @@
     - name: permissions
       file:
         path: /opt/tomcat/apache-tomcat-8.5.66/conf/
-        mode: g+r
+        mode: '777'
         recurse: yes
-    - name: conf permissions
-      file: 
-        path: /opt/tomcat/apache-tomcat-8.5.66/conf/
-        mode: g+x
 
 
 
