--- a/tomcat.service
+++ b/tomcat.service
@@ -12,8 +12,8 @@ Environment=CATALINA_BASE=/opt/tomcat
 Environment='CATALINA_OPTS=-Xms512M -Xmx1024M -server -XX:+UseParallelGC'
 Environment='JAVA_OPTS=-Djava.awt.headless=true -Djava.security.egd=file:/dev/./urandom'
 
-ExecStart=/opt/tomcat/bin/startup.sh
-ExecStop=/opt/tomcat/bin/shutdown.sh
+ExecStart=/opt/tomcat/apache-tomcat-8.5.66/bin/startup.sh
+ExecStop=/opt/tomcat/apache-tomcat-8.5.66/bin/shutdown.sh
 
 User=tomcat
 Group=tomcat
