--- a/tomcat_ubuntu.yaml
+++ b/tomcat_ubuntu.yaml
@@ -27,4 +27,12 @@
         src: /tmp/apache-tomcat-9.0.46.tar.gz
         dest: /opt/tomcat
         extra_opts: [--strip-components=1]
+    - name: group permissions
+      file:
+        path: /opt/tomcat
+        group: tomcat
+        recurse: yes
+    - name: owner permissions
+      file:
+        
     
