--- a/tomcat_ubuntu.yaml
+++ b/tomcat_ubuntu.yaml
@@ -45,7 +45,7 @@
         mode: g+r,g+x
     - name: ownership to webapp work tmp
       file:
-        path: "{{ tomcat_list }}"
+        path: /opt/tomcat/webapps
         owner: tomcat
         recurse: yes
         
