--- a/tomcat_ubuntu.yaml
+++ b/tomcat_ubuntu.yaml
@@ -51,6 +51,8 @@
       loop:
         - /opt/tomcat/webapps
         - /opt/tomcat/work
+        - /opt/tomcat/temp
+        - /opt/tomcat/logs
         
 
     
