--- a/tomcat_ubuntu.yaml
+++ b/tomcat_ubuntu.yaml
@@ -33,26 +33,10 @@
         src: /tmp/apache-tomcat-9.0.46.tar.gz
         dest: /opt/tomcat
         extra_opts: [--strip-components=1]
-    - name: group permissions
-      file:
-        path: /opt/tomcat
-        group: tomcat
-        recurse: yes
-    - name: owner permissions
-      file:
-        path: /opt/tomcat/conf/
-        recurse: yes
-        mode: g+r,g+x
-    - name: ownership to webapp work tmp
-      file: 
-        path: "{{ item }}"
-        owner: tomcat
-        recurse: yes
-      loop:
-        - /opt/tomcat/webapps
-        - /opt/tomcat/work
-        - /opt/tomcat/temp
-        - /opt/tomcat/logs
+      notify:
+        - group permissions
+        - owner permissions
+        - ownership to webapp work tmp 
     - name: service file 
       copy:
         src: tomcat.service
@@ -78,7 +62,27 @@
       systemd:
         name: tomcat
         state: restarted
-      
+  handlers:
+    - name: group permissions
+      file:
+        path: /opt/tomcat
+        group: tomcat
+        recurse: yes
+    - name: owner permissions
+      file:
+        path: /opt/tomcat/conf/
+        recurse: yes
+        mode: g+r,g+x
+    - name: ownership to webapp work tmp
+      file: 
+        path: "{{ item }}"
+        owner: tomcat
+        recurse: yes
+      loop:
+        - /opt/tomcat/webapps
+        - /opt/tomcat/work
+        - /opt/tomcat/temp
+        - /opt/tomcat/logs
 
 
     
