--- a/tomcat_ubuntu.yaml
+++ b/tomcat_ubuntu.yaml
@@ -28,11 +28,13 @@
       get_url:
         url: "https://downloads.apache.org/tomcat/tomcat-9/v9.0.46/bin/apache-tomcat-9.0.46.tar.gz"
         dest: /tmp/apache-tomcat-9.0.46.tar.gz
+      register: tomcat_download_result
     - name: unarchive the tar file
       unarchive:
         src: /tmp/apache-tomcat-9.0.46.tar.gz
         dest: /opt/tomcat
         extra_opts: [--strip-components=1]
+      when: ansible_facts['distribution'] == "Ubuntu" and not tomcat_download_result.stat.exists
       notify:
         - group permissions
         - owner permissions
