--- a/tomcat_ubuntu.yaml
+++ b/tomcat_ubuntu.yaml
@@ -31,7 +31,7 @@
         src: /tmp/apache-tomcat-9.0.46.tar.gz
         dest: /opt/tomcat
         extra_opts: [--strip-components=1]
-      when: ansible_facts['distribution'] == not tomcat_download.stat.exists
+      when: not tomcat_download.stat.exists
     - name: group permissions
       file:
         path: /opt/tomcat
