--- a/tomcat_ubuntu.yaml
+++ b/tomcat_ubuntu.yaml
@@ -66,6 +66,8 @@
       copy:
         src: tomcat-users.xml
         dest: /opt/tomcat/conf/tomcat-users.xml
+      notify:
+        - restating
     - name: context file
       copy:
         src: context.xml
@@ -73,6 +75,7 @@
       loop:
         - /opt/tomcat/webapps/manager/META-INF/context.xml
         - /opt/tomcat/webapps/host-manager/META-INF/context.xml
+  handlers   
     - name: restating
       systemd:
         name: tomcat
