start the tomcat

--- a/tomcat_ubuntu.yaml
+++ b/tomcat_ubuntu.yaml
@@ -32,41 +32,19 @@
         dest: /opt/tomcat
         extra_opts: [--strip-components=1]
       when: not tomcat_download.stat.exists
-      notify:
-        - group permissions
-        - owner permissions
-        - ownership to webapp work tmp
-    - name: service file 
-      copy:
-        src: tomcat.service
-        dest: /etc/systemd/system/tomcat.service
-      notify: 
-        - deamon reload and start
-    
-    - name: username and password
-      copy:
-        src: tomcat-users.xml
-        dest: /opt/tomcat/conf/tomcat-users.xml
-    - name: context file
-      copy:
-        src: context.xml
-        dest: "{{ item }}"
-      loop:
-        - /opt/tomcat/webapps/manager/META-INF/context.xml
-        - /opt/tomcat/webapps/host-manager/META-INF/context.xml
-      notify:
-        - restating
-  handlers: 
     - name: group permissions
       file:
         path: /opt/tomcat
         group: tomcat
+        owner: tomcat
         recurse: yes
+        state: directory
     - name: owner permissions
       file:
         path: /opt/tomcat/conf/
         recurse: yes
-        mode: g+r,g+x
+        mode: u=rwx,g=rx
+        state: directory
     - name: ownership to webapp work tmp
       file: 
         path: "{{ item }}"
@@ -77,11 +55,37 @@
         - /opt/tomcat/work
         - /opt/tomcat/temp
         - /opt/tomcat/logs
-    - name: deamon reload and start
+    - name: service file 
+      copy:
+        src: tomcat.service
+        dest: /etc/systemd/system/tomcat.service
+      notify: 
+       - reload daemon
+    - name: deamon enabled and start
       systemd:
         name: tomcat
-        daemon_reload: yes
         enabled: yes
+        state: started
+    - name: username and password
+      copy:
+        src: tomcat-users.xml
+        dest: /opt/tomcat/conf/tomcat-users.xml
+      notify:
+       - restating
+    - name: context file
+      copy:
+        src: context.xml
+        dest: "{{ item }}"
+      loop:
+        - /opt/tomcat/webapps/manager/META-INF/context.xml
+        - /opt/tomcat/webapps/host-manager/META-INF/context.xml
+      notify:
+      - restating
+  handlers:
+    - name: reload daemon
+      systemd:
+        name: tomcat.service
+        daemon_reload: yes
         state: started
     - name: restating
       systemd:
