--- a/tomcat_ubuntu.yaml
+++ b/tomcat_ubuntu.yaml
@@ -4,6 +4,7 @@
   become: yes
   vars_file:
     - vars/packages.yaml
+    - password.yaml
   tasks:
     - name: 
       package:
@@ -55,7 +56,7 @@
       loop: "{{ tomcat_ownership }}"
     - name: service file 
       copy:
-        src: tomcat.service
+        src: tomcat.service.j2
         dest: /etc/systemd/system/tomcat.service
       notify: 
         - reload daemon
@@ -66,7 +67,7 @@
         state: started
     - name: username and password
       copy:
-        src: tomcat-users.xml
+        src: tomcat-users.xml.j2
         dest: "{{ tomcat_user }}"
       notify:
         - restating
