--- a/tomcat_ubuntu.yaml
+++ b/tomcat_ubuntu.yaml
@@ -4,7 +4,7 @@
   become: yes
   vars_files:
     - vars/packages.yaml
-    - password.yaml
+    - vars/password.yaml
   tasks:
     - name: 
       package:
