start the tomcat

--- a/vars/packages.yaml
+++ b/vars/packages.yaml
@@ -9,6 +9,8 @@ tomcat_user: /opt/tomcat/conf/tomcat-users.xml
 java_path: /usr/lib/jvm/java-1.8.0-openjdk-amd64
 tomcat_start: /opt/tomcat/bin/startup.sh
 tomcat_stop: /opt/tomcat/bin/shutdown.sh
+tomcat_admin_username: qtdevops
+tomcat_admin_password: qtdevops@123
 tomcat_ownership: 
  - /opt/tomcat/webapps
  - /opt/tomcat/work
