start the tomcat

--- a/tomcat_ubuntu.yaml
+++ b/tomcat_ubuntu.yaml
@@ -2,6 +2,8 @@
 - name: tomcat installation on ubuntu
   hosts: all
   become: yes
+  vars_files:
+    - vars/package.yaml
   tasks:
     - name: 
       package:
