--- a/tomcat.service
+++ b/tomcat.service
@@ -15,7 +15,7 @@ Environment='JAVA_OPTS=-Djava.awt.headless=true -Djava.security.egd=file:/dev/./
 ExecStart=/opt/tomcat/bin/startup.sh
 ExecStop=/opt/tomcat/bin/shutdown.sh
 
-User={{ username }}
+User=tomcat
 Group=tomcat
 UMask=0007
 RestartSec=10
