--- a/tomcat_ubuntu.yaml
+++ b/tomcat_ubuntu.yaml
@@ -3,7 +3,7 @@
   hosts: all
   become: yes
   vars_files:
-    - vars/packages.yaml
+    - ./vars/packages.yaml
   tasks:
     - name: 
       package:
