context file adding

--- a/tomcat_ubuntu.yaml
+++ b/tomcat_ubuntu.yaml
@@ -74,7 +74,9 @@
       copy:
         src: context.xml
         dest: "{{ item }}"
-      loop: "{{ tomcat_context }}"
+      loop: 
+        - /opt/tomcat/webapps/manager/META-INF/context.xml
+        - /opt/tomcat/webapps/host-manager/META-INF/context.xml
       notify:
         - restating
   handlers:
