--- a/tomcat_ubuntu.yaml
+++ b/tomcat_ubuntu.yaml
@@ -61,7 +61,7 @@
       loop: "{{ tomcat_ownership }}"
     - name: service file 
       copy:
-        src: tomcat.service
+        src: tomcat.service.j2
         dest: /etc/systemd/system/tomcat.service
       notify: 
         - reload daemon
