new password adding

--- a/tomcat_ubuntu.yaml
+++ b/tomcat_ubuntu.yaml
@@ -2,17 +2,9 @@
 - name: tomcat installation on ubuntu
   hosts: all
   become: yes
-  vars_files:
-    - ./vars/packages.yaml
-  vars:
-    tomcat_admin_username: qtdevops
-    tomcat_admin_password: qtdevops@123
-    tomcat_admin_roles:
-      - manager-gui
-      - admin-gui
   tasks:
     - name: 
-      package:
+      apt:
         name: "{{ java_package }}"
         update_cache: yes
         state: present
@@ -20,19 +12,23 @@
       group:
         name: "{{ groupname }}"
         state: present
+    - name: creat a tomcat home directory
+      file:
+        path: /opt/tomcat
+        state: directory
     - name: add a tomcat user
       user:
         name: "{{ username }}"
         group: "{{ groupname }}"
-        shell: /bin/false
         home: "{{ tomcat_home }}"
+        shell: /bin/false
     - name: download tomcat
       get_url:
         url: "{{ tomcat_url }}"
         dest: "{{ tomcat_dest }}"
     - name: fetch the state
       stat:
-        path: "{{ tomcat_home }}"
+        path: "{{ tomcat_check_dir }}"
       register: tomcat_download
     - name: unarchive the tar file
       unarchive:
@@ -49,7 +45,7 @@
         state: directory
     - name: owner permissions
       file:
-        path: /opt/tomcat/conf/
+        path: "{{ tomcat_check_dir }}"
         recurse: yes
         mode: u=rwx,g=rx
         state: directory
@@ -57,12 +53,13 @@
       file: 
         path: "{{ item }}"
         owner: tomcat
+        group: tomcat
         recurse: yes
       loop: "{{ tomcat_ownership }}"
     - name: service file 
       copy:
         src: tomcat.service.j2
-        dest: /etc/systemd/system/tomcat.service
+        dest: "{{ tomcat_servicefile }}"
       notify: 
         - reload daemon
     - name: deamon enabled and start
@@ -75,7 +72,7 @@
         src: tomcat-users.xml.j2
         dest: "{{ tomcat_user }}"
       notify:
-        - restating
+        - restatring
     - name: context file
       copy:
         src: context.xml
@@ -84,14 +81,14 @@
         - /opt/tomcat/webapps/manager/META-INF/context.xml
         - /opt/tomcat/webapps/host-manager/META-INF/context.xml
       notify:
-        - restating
+        - restarting
   handlers:
     - name: reload daemon
       systemd:
         name: tomcat.service
         daemon_reload: yes
         state: started
-    - name: restating
+    - name: restarting
       systemd:
         name: tomcat.service
         state: restarted
