--- a/vars/packages.yaml
+++ b/vars/packages.yaml
@@ -9,6 +9,10 @@ tomcat_user: /opt/tomcat/conf/tomcat-users.xml
 java_path: /usr/lib/jvm/java-1.8.0-openjdk-amd64
 tomcat_start: /opt/tomcat/bin/startup.sh
 tomcat_stop: /opt/tomcat/bin/shutdown.sh
+tomcat_check_dir: /opt/tomcat/conf
+tomcat_servicefile: /etc/systemd/system/tomcat.service
+tomcat_admin_username: devops
+tomcat_admin_password: devops
 tomcat_ownership: 
  - /opt/tomcat/webapps
  - /opt/tomcat/work
