--- a/tomcat_ubunturole/tasks/main.yml
+++ b/tomcat_ubunturole/tasks/main.yml
@@ -54,7 +54,7 @@
         recurse: yes
       loop: "{{ tomcat_ownership }}"
     - name: service file 
-      copy:
+      template:
         src: tomcat.service.j2
         dest: "{{ tomcat_servicefile }}"
       notify: 
@@ -65,7 +65,7 @@
         enabled: yes
         state: started
     - name: username and password
-      copy:
+      template:
         src: tomcat-users.xml.j2
         dest: "{{ tomcat_user }}"
       notify:
