--- a/tomcat_ubunturole/vars/main.yml
+++ b/tomcat_ubunturole/vars/main.yml
@@ -14,6 +14,9 @@ tomcat_check_dir: /opt/tomcat/conf
 tomcat_servicefile: /etc/systemd/system/tomcat.service
 tomcat_admin_username: devops
 tomcat_admin_password: devops
+tomcat_admin_roles:
+  - manager-gui
+  - admin-gui
 tomcat_ownership: 
  - /opt/tomcat/webapps
  - /opt/tomcat/work
