--- a/tomcat_ubunturole/vars/main.yml
+++ b/tomcat_ubunturole/vars/main.yml
@@ -12,8 +12,8 @@ tomcat_start: /opt/tomcat/bin/startup.sh
 tomcat_stop: /opt/tomcat/bin/shutdown.sh
 tomcat_check_dir: /opt/tomcat/conf
 tomcat_servicefile: /etc/systemd/system/tomcat.service
-tomcat_admin_username: devops
-tomcat_admin_password: devops
+tomcat_admin_username: raghu  
+tomcat_admin_password: raghu
 tomcat_admin_roles:
   - manager-gui
   - admin-gui
