--- a/tomcat_ubuntu.yaml
+++ b/tomcat_ubuntu.yaml
@@ -75,7 +75,7 @@
         src: tomcat-users.xml.j2
         dest: "{{ tomcat_user }}"
       notify:
-        - restatring
+        - restarting
     - name: context file
       copy:
         src: context.xml
